# RayTracingSDL

./: .gitignore  CMakeLists.txt  readme.md
include/: bvh.h  camera.h  illumination.h  light_sources.h  render_functions.h  scene.h  shapes.h
src/: bvh.c  camera.c  camera.h  illumination.c  light_sources.c  light_sources.h  main.c  objects.c  ray.c  ray.h  render_functions.c  scene.c  scene.h  shapes.c  shapes.h
tests/: buildTest.bash  buildTests.cmd  test_camera.c  test_camera_ray.c  test_illumination.c  test_illumination_diffuse.c  test_illumination_specular.c  test_illumination_surface.c  test_lights.c  test_main.c  test_objects.c  test_ray.c  test_scene.c  test_shapes.c
